--- a/Front/Layout/MainLayout.razor
+++ b/Front/Layout/MainLayout.razor
@@ -162,7 +162,7 @@
                 </div>
             </div>
             <div class="col-auto align-self-center">
-                <a href="profile.html" class="link text-color-theme">
+                <a href="/profile" class="link text-color-theme">
                     <i class="bi bi-person-circle size-22"></i>
                 </a>
             </div>
@@ -186,7 +186,7 @@
     <div class="container">
         <ul class="nav nav-pills nav-justified">
             <li class="nav-item">
-                <a class="nav-link active" href="home.html">
+                <a class="nav-link active" href="/home">
                         <span>
                             <i class="nav-icon bi bi-house"></i>
                             <span class="nav-text">صفحه اصلی</span>
